<resources>
    <string name="app_name">NUMAD23Sp_ShambhaviKul</string>
    <string name="no_value_string">No Value</string>
    <string name="convert_pressed">Pressed</string>
    <string name="convert_collector">Link Collector</string>
    <string name="desc">floatingButton</string>
    <string name="link_collector">LINK COLLECTOR</string>
    <string name="link_details">Enter Link Details</string>
    <string name="link_name">Name:</string>
    <string name="link_url">Url:</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>
    <string name="link_add_success">Link has been added</string>
    <string name="link_invalid">Url is invalid. Please enter valid url</string>
    <string name="NameValuePair">Name: %1$s</string>
    <string name="UrlValuePair">Url: %1$s</string>
    <string name="Http">http://</string>
    <string name="prime_directive">Prime Directive</string>
    <string name="terminate_search">Terminate Search</string>
    <string name="find_primes">Find Primes</string>
    <string name="current_number_is">Current number is: </string>
    <string name="latest_prime_number_is">Latest Prime number is: </string>
    <string name="pacifier_switch">Pacifier Switch</string>
    <string name="location">Location</string>
    <string name="location_latitude">Latitude :</string>
    <string name="location_longitude">Longitude :</string>
    <string name="total_distance">Total distance:</string>
    <string name="reset_distance">Reset Distance</string>


</resources>